Fix overflow regression bug

--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -488,6 +488,7 @@ button.rbc-input::-moz-focus-inner {
   flex: 0 0 auto;
   -ms-flex-direction: column;
   flex-direction: column;
+  width: 100%;
 }
 .rbc-time-header.rbc-overflowing {
   border-right: 1px solid #DDD;
@@ -522,7 +523,7 @@ button.rbc-input::-moz-focus-inner {
   align-items: flex-start;
   width: 100%;
   border-top: 2px solid #DDD;
-  overflow-y: auto;
+  overflow-y: hidden;
   position: relative;
 }
 .rbc-time-content > .rbc-time-gutter {
